--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
     },
     "require": {
         "php": "^7.3",
-        "escsrl/user": "^2.1",
+        "veronicalupopasini/user": "^2.1",
         "monolog/monolog": "^2.0",
         "symfony/console": "^5.0",
         "symfony/process": "^5.0"
