update library name for external inclusion

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "escsrl/command",
+    "name": "veronicalupopasini/command",
     "type": "library",
     "description": "Base command",
     "keywords": [
