--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "veronicalupopasini/command",
+    "name": "escsrl/command",
     "type": "library",
     "description": "Base command",
     "keywords": [
@@ -26,7 +26,7 @@
     },
     "require": {
         "php": "^7.3",
-        "veronicalupopasini/user": "^2.1",
+        "escsrl/user": "dev-extensible-user",
         "monolog/monolog": "^2.0",
         "symfony/console": "^5.0",
         "symfony/process": "^5.0"
@@ -34,5 +34,11 @@
     "config": {
         "sort-packages": true
     },
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "https://github.com/veronicalupopasini/user.git"
+        }
+    ],
     "version": "2.0.1"
 }
